--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link href="style.css" rel="stylesheet">
+  </head>
   <body>
     <h1>Hello!</h1>
     <p>This website is a work in progress.</p>
