--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="navbar"></div>
+    <div id="navbar"><div>Blah</div></div>
     <h1>Hello!</h1>
     <p>This website is a work in progress.</p>
   </body>
